--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,9 +1,16 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "vocabulary-test-premium",
-  "compatibility_date": "2024-01-01",
+  "name": "vocabulary-education-system",
+  "compatibility_date": "2024-01-01", 
   "pages_build_output_dir": "./dist",
-  "compatibility_flags": [
-    "nodejs_compat"
+  "compatibility_flags": ["nodejs_compat"],
+  
+  // 🗄️ D1 共有データベース設定
+  "d1_databases": [
+    {
+      "binding": "DB",
+      "database_name": "vocabulary-education-system",
+      "database_id": "local-development-db"
+    }
   ]
 }
