--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "vocabulary-test-system-v2-premium",
+  "name": "vocabulary-education-system",
   "version": "2.1.0",
-  "description": "英単語テスト作成システム v2.0 + プレミアムPDF生成機能",
+  "description": "教育用単語管理システム - リアルタイム30名対応版",
   "type": "module",
   "scripts": {
     "dev": "wrangler pages dev dist --ip 0.0.0.0 --port 3000",
     "build": "vite build",
-    "deploy": "npm run build && wrangler pages deploy dist --project-name vocabulary-test-premium",
+    "deploy": "npm run build && wrangler pages deploy dist",
     "preview": "vite preview",
     "test": "curl http://localhost:3000",
-    "clean-port": "fuser -k 3000/tcp 2>/dev/null || true",
-    "git:init": "git init && git add . && git commit -m 'Initial commit'",
-    "git:commit": "git add . && git commit -m",
-    "git:status": "git status",
-    "git:log": "git log --oneline"
+    "clean-port": "fuser -k 3000/tcp 2>/dev/null || true"
   },
   "dependencies": {
     "hono": "^4.0.0"
@@ -21,7 +17,6 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250705.0",
     "@hono/vite-cloudflare-pages": "^0.4.2",
-    "puppeteer": "^24.17.1",
     "typescript": "^5.0.0",
     "vite": "^5.0.0",
     "wrangler": "^3.78.0"
