--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "wrangler pages dev dist --ip 0.0.0.0 --port 3000",
     "build": "vite build",
+    "vercel-build": "npm run build",
     "deploy": "npm run build && wrangler pages deploy dist",
+    "deploy:vercel": "vercel --prod",
     "preview": "vite preview",
     "test": "curl http://localhost:3000",
     "clean-port": "fuser -k 3000/tcp 2>/dev/null || true"
@@ -18,6 +20,7 @@
     "@cloudflare/workers-types": "^4.20250705.0",
     "@hono/vite-cloudflare-pages": "^0.4.2",
     "typescript": "^5.0.0",
+    "vercel": "^46.1.1",
     "vite": "^5.0.0",
     "wrangler": "^3.78.0"
   }
